--- a/config/database.yml
+++ b/config/database.yml
@@ -24,4 +24,6 @@ production:
   adapter: postgresql
   encoding: unicode
   pool: 5
-  database: db/production.sqlite3
+  database: monolist_production
+  username: monolist
+  password: <%= ENV['MONOLIST_DATABASE_PASSWORD'] %>
