--- a/config/database.yml
+++ b/config/database.yml
@@ -21,9 +21,5 @@ test:
   database: db/test.sqlite3
 
 production:
-  adapter: postgresql
-  encoding: unicode
-  pool: 5
-  database: monolist_production
-  username: monolist
-  password: <%= ENV['MONOLIST_DATABASE_PASSWORD'] %>
+  <<: *default
+  database: db/production.sqlite3
